[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/personagem/aprendiz001.png" type="Texture" id=1]
[ext_resource path="res://cenas/elementos/Equipamento.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/cartas/cora√ßao-vermelho-e-preto.png" type="Texture" id=3]
[ext_resource path="res://sprites/cartas/Sword.png" type="Texture" id=4]
[ext_resource path="res://sprites/cartas/Shield.png" type="Texture" id=5]
[ext_resource path="res://cenas/cartas/fontes/valoresGrandes.tres" type="DynamicFont" id=6]
[ext_resource path="res://script/Personagem.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55, 72.5 )

[node name="Personagem" type="Area2D"]
script = ExtResource( 7 )

[node name="fundo" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Equipamento1" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 85, -62 )

[node name="Equipamento2" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 90, 0 )

[node name="Equipamento3" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 85, 62 )

[node name="coracao" type="Sprite" parent="."]
position = Vector2( -90, -30 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ataque" type="Sprite" parent="."]
position = Vector2( -28, 45 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="defesa" type="Sprite" parent="."]
position = Vector2( 26, 44 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 5 )

[node name="lblVida" type="Label" parent="."]
margin_left = -121.0
margin_top = -63.0
margin_right = -58.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblAtaque" type="Label" parent="."]
margin_left = -60.0
margin_top = 16.0
margin_right = 3.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblDefesa" type="Label" parent="."]
margin_left = -5.0
margin_top = 16.0
margin_right = 58.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
